<resources>
    <string name="app_name">HIME</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_home">Home</string>
    <string name="string_transactions">Past Transactions</string>
    <string name="string_account">Account</string>
    <string name="string_history">Medical History</string>
    <string name="string_insurance">Insurance About</string>
    <string name="string_hospital">Hospital</string>
    <string name="title_activity_splash_screen">HIME</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="AccountId">Account ID</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="Login">Login</string>
    <string name="title_medicalhistory_list">Medical Histories</string>
    <string name="title_medicalhistory_detail">Medical History Detail</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="temp_day">23</string>
    <string name="temp_month">Feb</string>
    <string name="patients_name">Patient\'s Name</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="title_activity_insurance_admin_profile">Insurance Admin</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_doctor_profile">DoctorProfile</string>
    <string name="pID">Patient ID:</string>
    <string name="patient_id">Patient ID</string>
    <string name="hospital">Hospital Name:</string>
    <string name="hospital_name_transaction">Hospital...</string>
    <string name="doctor_name_transaction">Doctor Name</string>
    <string name="transaction_description">Transaction...</string>
    <string name="description_transaction">Description:</string>
    <string name="transaction_date">Month-Date-Year</string>
    <string name="date_transaction">Transaction Date:</string>
    <string name="transaction_price">Php. 100.00</string>
    <string name="price_transactiom">Transaction Price:</string>
    <string name="name_doctor">Doctor Name:</string>
    <string name="title_activity_patient_to_hospital">PatientToHospitalActivity</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="set_appointment">Set Appointment</string>
    <string name="ask_referral">Ask Referral</string>
    <string name="visit_doctor">VISIT DOCTOR</string>
    <string name="visit_hospital">VISIT HOSPITAL</string>
    <string name="patient_hospital_doctor">PHToDoctor</string>
    <string name="patient_hospital">PTHToHospital</string>
    <string name="title_activity_appointment_status">AppointmentStatus</string>
    <string name="title_doctor">DoctorActivity</string>
    <string name="set">SET</string>
    <string name="cancel">CANCEL</string>
    <string name="choose_date">Choose Date:</string>

    <string-array name="months_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="days_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>

